feat: allow update category (#29)
* feat: operation update category

* feat: allow update category

* feat: swagger update category
