# config/routes.rb
@@ -13,7 +13,7 @@ Rails.application.routes.draw do
     namespace :v1 do
       resources :accounts, only: %i[index create update destroy]
       resources :records, only: %i[index create update destroy]
-      resources :categories, only: %i[index create]
+      resources :categories, only: %i[index create update]
     end
   end
 end
