# swagger/v1/swagger.yaml
@@ -60,6 +60,12 @@ paths:
       tags:
         - Categories
       $ref: "./paths/categories/create.yaml"
+  /api/v1/categories/{id}:
+    patch:
+      summary: Atualizar uma categoria
+      tags:
+        - Categories
+      $ref: "./paths/categories/update.yaml"
   /api/v1/records:
     get:
       summary: Lista de transações
